# gen-nms-package

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.md:Zone.Identifier  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
gen_nms/: __init__.py  _meta_registrations.py  extension.py  utils.py
gen_nms/csrc/: init_module.cpp
gen_nms/csrc/ops/: ciou_nms.cpp  ciou_nms.h  diou_nms.cpp  diou_nms.h  giou_nms.cpp  giou_nms.h  iou_nms.cpp  iou_nms.h
gen_nms/csrc/ops/cpu/: ciou_nms_kernel.cpp  diou_nms_kernel.cpp  giou_nms_kernel.cpp  iou_nms_kernel.cpp
gen_nms/csrc/ops/cuda/: ciou_nms_kernel.cu  cuda_helpers.h  diou_nms_kernel.cu  giou_nms_kernel.cu  iou_nms_kernel.cu
gen_nms/ops/: __init__.py  boxes.py
repaired/: gen_nms-0.1.0-cp312-cp312-linux_x86_64.whl  gen_nms-0.1.0-cp312-cp312-manylinux_2_34_x86_64.whl
test/: benchmark_gen_nms_all_metrics_v3.py  benchmark_gen_nms_all_metrics_v4.py  diou_benchmark_100.csv  diou_benchmark_10000.csv  diou_benchmark_1500.csv  diou_benchmark_500.csv  diou_benchmark_5000.csv  n1000_all_metrics.csv  n1000_iou_vs_torchvision.csv  n15000_all_metrics.csv  n15000_iou_vs_torchvision.csv  n200_all_metrics.csv  n200_iou_vs_torchvision.csv  n5000_all_metrics.csv  n5000_iou_vs_torchvision.csv  n50_all_metrics.csv  n50_iou_vs_torchvision.csv  nms_testing.ipynb  smoke_test.py  test_gen_nms_benchmark.py  test_opcheck.py
wheelhouse-ubuntu-22.04/: gen_nms-0.1.0-cp310-cp310-linux_x86_64.whl  gen_nms-0.1.0-cp311-cp311-linux_x86_64.whl  gen_nms-0.1.0-cp312-cp312-linux_x86_64.whl
